# MGraph-AI__Service__Html__Graph

./: .gitignore  README.md  pyproject.toml  requirements-test.txt
.github/actions/qunit__run-tests/: action.yml
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml
.template/: VERSION
docs/: README.MD
docs/base-service/: README.md  compete-guide-to-setup-new-repo.md  repo-setup-guide.md  why-not-use-github-templates.md
docs/dev/llm-briefs/: v1.1.9__html-graph__frontend-llm_brief_to_backend-llm.md  v1.4.0__html-graph-service__llm-brief.md  v1_10_6__mGraph-db__llm_briefing.md  v1_4_7__mGraph-db__llm_briefing.md
mgraph_ai_service_html__graph/: __init__.py  config.py
mgraph_ai_service_html__graph/fast_api/: Base__Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_html__graph/service/info/: Service_Info.py
mgraph_ai_service_html__graph/utils/: Version.py
mgraph_ai_service_html__graph/utils/deploy/: Deploy__Service.py
mgraph_ai_service_html_graph/: __init__.py  config.py  version
mgraph_ai_service_html_graph/fast_api/: Html_Graph__Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_html_graph/utils/: Version.py
mgraph_ai_service_html_graph__render_ui/: __init__.py
scripts/: run-locally.sh  setup-new-service-from-bare-github-repo.sh
scripts/utils/: release-script-v1.0.0.sh  update-version.sh
tests/deploy_aws/: test_Deploy__Service__base.py
tests/unit/: Base__Service__Fast_API__Test_Objs.py  Html_Graph__Service__Fast_API__Test_Objs.py  sample_html_files.py  test_config.py
(+506 files in other folders)
